add outer sum curvaure measurements back in, and do more stats on ON v OT1 v OT2 individually

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -862,7 +862,7 @@
     "\n",
     "        outer_mean_curvature = np.mean(outer_path_curvatures)\n",
     "        outer_std_curvature = np.std(outer_path_curvatures)\n",
-    "        # don't use the sum, since the amount of data in this region is not constant between all molecules\n",
+    "        outer_sum_curvature = np.sum(outer_path_curvatures)\n",
     "\n",
     "        # store\n",
     "        grains_dicts_middle_curvature_analysis[sample_type][grain_index] = grain_data.copy()\n",
@@ -890,6 +890,9 @@
     "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"outer_path_std_curvature\"\n",
     "        ] = outer_std_curvature\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"outer_path_sum_curvature\"\n",
+    "        ] = outer_sum_curvature\n",
     "\n",
     "print(f\"Bad grains for middle curvature analysis: {bad_grains_middle_curvature_analysis}\")\n",
     "\n",
@@ -986,7 +989,7 @@
     "        )\n",
     "        axes[i].set_title(f\"Q-Q Plot: {sample_type}\")\n",
     "        axes[i].grid(True, alpha=0.3)\n",
-    "    plt.suptitle(\"Q-Q Plots (should be linear if normal)\", fontsize=16)\n",
+    "    plt.suptitle(f\"Q-Q Plots for {column} (should be linear if normal)\", fontsize=16)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
@@ -1056,12 +1059,28 @@
     "        sample_differentiator_column=sample_differentiator_column,\n",
     "    )\n",
     "\n",
+    "\n",
     "def t_test_between_two_samples(data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str):\n",
     "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
     "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
     "    t_stat, p_value = ttest_ind(data1, data2, equal_var=False)\n",
     "    print(\n",
     "        f\"\\n\\nT-test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: T={t_stat:.4f}, p={p_value:.4f}\"\n",
+    "    )\n",
+    "    if p_value < 0.05:\n",
+    "        print(\"Significant differences found\")\n",
+    "    else:\n",
+    "        print(\"No significant differences found\")\n",
+    "\n",
+    "\n",
+    "def mann_whitney_u_test_between_two_samples(\n",
+    "    data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str\n",
+    "):\n",
+    "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
+    "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
+    "    u_stat, p_value = scipy_stats.mannwhitneyu(data1, data2, alternative=\"two-sided\")\n",
+    "    print(\n",
+    "        f\"\\n\\nMann-Whitney U test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: U={u_stat:.4f}, p={p_value:.4f}\"\n",
     "    )\n",
     "    if p_value < 0.05:\n",
     "        print(\"Significant differences found\")\n",
@@ -1096,6 +1115,7 @@
     "                \"grain_index\": grain_index,\n",
     "                \"mean_curvature\": grain_data[\"outer_path_mean_curvature\"],\n",
     "                \"std_curvature\": grain_data[\"outer_path_std_curvature\"],\n",
+    "                \"sum_curvature\": grain_data[\"outer_path_sum_curvature\"],\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -1193,6 +1213,23 @@
     "plt.show()\n",
     "\n",
     "\n",
+    "# sum\n",
+    "sns.stripplot(x=\"sample_type\", y=\"sum_curvature\", data=df_all_outer_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"sum_curvature\",\n",
+    "    data=df_all_outer_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"outer sum Curvature by Sample Type\")\n",
+    "plt.ylabel(\"outer sum curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
     "print(\"\\n\\n===== middle curvatures stats =====\")\n",
     "\n",
     "\n",
@@ -1215,6 +1252,38 @@
     "\n",
     "t_test_between_two_samples(\n",
     "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"sum_curvature\"\n",
+    ")\n",
+    "\n",
+    "t_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"ON_SC\", sample_type_2=\"OT1_SC\", column=\"mean_curvature\"\n",
+    ")\n",
+    "\n",
+    "t_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"ON_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
+    ")\n",
+    "\n",
+    "mann_whitney_u_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
+    ")\n",
+    "\n",
+    "mann_whitney_u_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"ON_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
+    ")\n",
+    "\n",
+    "mann_whitney_u_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"ON_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
+    ")\n",
+    "\n",
+    "mann_whitney_u_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"sum_curvature\"\n",
+    ")\n",
+    "\n",
+    "mann_whitney_u_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"ON_SC\", sample_type_2=\"OT2_SC\", column=\"sum_curvature\"\n",
+    ")\n",
+    "\n",
+    "mann_whitney_u_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"ON_SC\", sample_type_2=\"OT2_SC\", column=\"sum_curvature\"\n",
     ")\n",
     "\n",
     "print(\"\\n\\n===== outer curvatures stats =====\")\n",
@@ -1283,10 +1352,11 @@
     "# plot them\n",
     "plot_all_grains_dictionary(\n",
     "    grain_dict=highest_middle_curvature_mean_ot2_molecules,\n",
+    "    plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
     "    plot_lineplots=[\n",
     "        [\n",
-    "            \"middle_cumulative_resampled_distances_nm\",\n",
-    "            \"middle_path_curvatures\",\n",
+    "            \"cumulative_resampled_distances_nm\",\n",
+    "            \"abs_curvature\",\n",
     "            \"distance (nm)\",\n",
     "            \"curvature (rad/nm)\",\n",
     "            \"Curvature\",\n",
@@ -1307,10 +1377,11 @@
     "\n",
     "plot_all_grains_dictionary(\n",
     "    grain_dict=lowest_middle_curvature_mean_ot2_molecules,\n",
+    "    plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
     "    plot_lineplots=[\n",
     "        [\n",
-    "            \"middle_cumulative_resampled_distances_nm\",\n",
-    "            \"middle_path_curvatures\",\n",
+    "            \"cumulative_resampled_distances_nm\",\n",
+    "            \"abs_curvature\",\n",
     "            \"distance (nm)\",\n",
     "            \"curvature (rad/nm)\",\n",
     "            \"Curvature\",\n",
@@ -1333,10 +1404,11 @@
     "# plot them\n",
     "plot_all_grains_dictionary(\n",
     "    grain_dict=highest_middle_curvature_mean_ot1_molecules,\n",
+    "    plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
     "    plot_lineplots=[\n",
     "        [\n",
-    "            \"middle_cumulative_resampled_distances_nm\",\n",
-    "            \"middle_path_curvatures\",\n",
+    "            \"cumulative_resampled_distances_nm\",\n",
+    "            \"abs_curvature\",\n",
     "            \"distance (nm)\",\n",
     "            \"curvature (rad/nm)\",\n",
     "            \"Curvature\",\n",
@@ -1357,10 +1429,11 @@
     "\n",
     "plot_all_grains_dictionary(\n",
     "    grain_dict=lowest_middle_curvature_mean_ot1_molecules,\n",
+    "    plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
     "    plot_lineplots=[\n",
     "        [\n",
-    "            \"middle_cumulative_resampled_distances_nm\",\n",
-    "            \"middle_path_curvatures\",\n",
+    "            \"cumulative_resampled_distances_nm\",\n",
+    "            \"abs_curvature\",\n",
     "            \"distance (nm)\",\n",
     "            \"curvature (rad/nm)\",\n",
     "            \"Curvature\",\n",
