add ext data figure plot draft

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1448,9 +1448,112 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5265f3",
+   "id": "f4bf5055",
    "metadata": {},
-   "source": []
+   "source": [
+    "### ext figure for middle curvature\n",
+    "\n",
+    "- append what we have (in the slides) as a picture to the extended figure\n",
+    "\t- two pictures of the afm (34 OT2, 52 OT1) for the sharp images, add scale bars, add a dotted line along the dna to show the middle region \n",
+    "\t- show only the OT2 & OT1 violin plots with labels \"OT1\", \"OT2\"\n",
+    "\t- grab the N for the caption\n",
+    "\t- scale bar or add \"image width\"\n",
+    "- call the name \"central mean curvature\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0127bd01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot OT2 grain 34 with scale bar and line for the middle region\n",
+    "ot2_grain = grains_dicts_middle_curvature_analysis[\"OT2_SC\"][42]\n",
+    "ot1_grain = grains_dicts_middle_curvature_analysis[\"OT1_SC\"][52]\n",
+    "\n",
+    "\n",
+    "def plot_grain_for_ext_fig(\n",
+    "    grain_dict: dict,\n",
+    "    coloured_lines_norm_bounds: tuple[int, int] = (0.0, 0.3),\n",
+    ") -> None:\n",
+    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    \n",
+    "    image = grain_dict[\"image\"]\n",
+    "    middle_path_px = grain_dict[\"middle_path_px\"]\n",
+    "    resampled_path_px = grain_dict[\"resampled_path_px\"]\n",
+    "    abs_curvature = grain_dict[\"abs_curvature\"]\n",
+    "    p_to_nm = grain_dict[\"p_to_nm\"]\n",
+    "\n",
+    "    plt.imshow(image, cmap=CMAP, vmin=VMIN, vmax=VMAX)\n",
+    "\n",
+    "    plt.plot(middle_path_px[:, 1], middle_path_px[:, 0], color=\"lightgrey\", linewidth=25, label=\"Middle Path\")\n",
+    "\n",
+    "    normalised_curvature = (abs_curvature - coloured_lines_norm_bounds[0]) / (\n",
+    "        coloured_lines_norm_bounds[1] - coloured_lines_norm_bounds[0]\n",
+    "    )\n",
+    "    for point_index, point in enumerate(resampled_path_px):\n",
+    "        colour = mpl.cm.Blues(normalised_curvature[point_index])\n",
+    "        if point_index > 0:\n",
+    "            previous_point = resampled_path_px[point_index - 1]\n",
+    "            plt.plot(\n",
+    "                [previous_point[1], point[1]],\n",
+    "                [previous_point[0], point[0]],\n",
+    "                color=colour,\n",
+    "                linewidth=8,\n",
+    "            )\n",
+    "\n",
+    "    # render a scale bar of 20 nm\n",
+    "\n",
+    "    scale_bar_length_nm = 20\n",
+    "    scale_bar_length_px = scale_bar_length_nm / p_to_nm\n",
+    "    # draw a white line on the image in the bottom right\n",
+    "    scale_bar_r = image.shape[1] - image.shape[1] * 0.08\n",
+    "    scale_bar_y = image.shape[0] - image.shape[0] * 0.08\n",
+    "    scale_bar_l = scale_bar_r - scale_bar_length_px\n",
+    "    plt.plot(\n",
+    "        [scale_bar_l, scale_bar_r],\n",
+    "        [scale_bar_y, scale_bar_y],\n",
+    "        color=\"white\",\n",
+    "        linewidth=15,\n",
+    "        label=f\"Scale Bar: {scale_bar_length_nm} nm\",\n",
+    "    )\n",
+    "\n",
+    "    # turn axes off\n",
+    "    plt.axis(\"off\")\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "plot_grain_for_ext_fig(ot2_grain)\n",
+    "plot_grain_for_ext_fig(ot1_grain)\n",
+    "\n",
+    "# plot the violins of just OT1 & OT2 middle mean curvature\n",
+    "df_middle_curvature_stats_ot1_ot2 = df_all_middle_curvature_stats[\n",
+    "    df_all_middle_curvature_stats[\"sample_type\"].isin([\"OT1_SC\", \"OT2_SC\"])\n",
+    "]\n",
+    "sns.stripplot(x=\"sample_type\", y=\"mean_curvature\", data=df_middle_curvature_stats_ot1_ot2, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"mean_curvature\",\n",
+    "    data=df_middle_curvature_stats_ot1_ot2,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.ylabel(\"Central mean curvature (rad/nm)\", fontsize=16)\n",
+    "# set font size of x ticks\n",
+    "plt.xticks(fontsize=16)\n",
+    "# set font size of y ticks\n",
+    "plt.yticks(fontsize=14)\n",
+    "plt.xlabel(\"\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# print the Ns\n",
+    "samples = df_middle_curvature_stats_ot1_ot2[\"sample_type\"].value_counts()\n",
+    "print(samples)"
+   ]
   }
  ],
  "metadata": {
