change ext figure presentation details

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1469,8 +1469,8 @@
    "outputs": [],
    "source": [
     "# plot OT2 grain 34 with scale bar and line for the middle region\n",
-    "ot2_grain = grains_dicts_middle_curvature_analysis[\"OT2_SC\"][42]\n",
-    "ot1_grain = grains_dicts_middle_curvature_analysis[\"OT1_SC\"][52]\n",
+    "ot2_grain = grains_dicts_middle_curvature_analysis[\"OT2_SC\"][34]\n",
+    "ot1_grain = grains_dicts_middle_curvature_analysis[\"OT1_SC\"][32]\n",
     "\n",
     "\n",
     "def plot_grain_for_ext_fig(\n",
@@ -1481,6 +1481,7 @@
     "    \n",
     "    image = grain_dict[\"image\"]\n",
     "    middle_path_px = grain_dict[\"middle_path_px\"]\n",
+    "    middle_path_curvatures = grain_dict[\"middle_path_curvatures\"]\n",
     "    resampled_path_px = grain_dict[\"resampled_path_px\"]\n",
     "    abs_curvature = grain_dict[\"abs_curvature\"]\n",
     "    p_to_nm = grain_dict[\"p_to_nm\"]\n",
@@ -1489,13 +1490,13 @@
     "\n",
     "    plt.plot(middle_path_px[:, 1], middle_path_px[:, 0], color=\"lightgrey\", linewidth=25, label=\"Middle Path\")\n",
     "\n",
-    "    normalised_curvature = (abs_curvature - coloured_lines_norm_bounds[0]) / (\n",
+    "    normalised_curvature = (middle_path_curvatures - coloured_lines_norm_bounds[0]) / (\n",
     "        coloured_lines_norm_bounds[1] - coloured_lines_norm_bounds[0]\n",
     "    )\n",
-    "    for point_index, point in enumerate(resampled_path_px):\n",
+    "    for point_index, point in enumerate(middle_path_px):\n",
     "        colour = mpl.cm.Blues(normalised_curvature[point_index])\n",
     "        if point_index > 0:\n",
-    "            previous_point = resampled_path_px[point_index - 1]\n",
+    "            previous_point = middle_path_px[point_index - 1]\n",
     "            plt.plot(\n",
     "                [previous_point[1], point[1]],\n",
     "                [previous_point[0], point[0]],\n",
@@ -1536,14 +1537,19 @@
     "    x=\"sample_type\",\n",
     "    y=\"mean_curvature\",\n",
     "    data=df_middle_curvature_stats_ot1_ot2,\n",
-    "    color=\"lightblue\",\n",
+    "    # color=\"lightblue\",\n",
+    "    hue=\"sample_type\",\n",
+    "    # set palette with hex\n",
+    "    palette={\"OT1_SC\": \"#3C7FE6\", \"OT2_SC\": \"#0C5ACE\"},\n",
     "    inner=None,\n",
-    "    linewidth=0.5,\n",
+    "    linewidth=2,\n",
     "    alpha=0.5,\n",
     ")\n",
     "plt.ylabel(\"Central mean curvature (rad/nm)\", fontsize=16)\n",
     "# set font size of x ticks\n",
     "plt.xticks(fontsize=16)\n",
+    "# rename the xticks\n",
+    "plt.xticks(ticks=[0, 1], labels=[\"ot1 sc\", \"ot2 sc\"])\n",
     "# set font size of y ticks\n",
     "plt.yticks(fontsize=14)\n",
     "plt.xlabel(\"\")\n",
