add saving the ext plot images and turn of some other plotting (defects)

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -54,6 +54,9 @@
     "    \"OT2_SC\": BASE_DATA_DIR / f\"cas9_OT2_SC/date_{DATE_TO_READ_FROM}\",\n",
     "}\n",
     "BASE_SAVE_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/processed_grains/\")\n",
+    "EXT_FIG_DATA_SAVE_DIR = Path(\n",
+    "    \"/Users/sylvi/topo_data/cas9-paper-our-response-to-reviewers/20250805-quentin-reviewer-response/figure_ext_3_images/high_res_curvature_graphs\"\n",
+    ")\n",
     "MAX_PX_TO_NM = 10.0\n",
     "\n",
     "save_dirs = {\n",
@@ -73,6 +76,8 @@
     "        sample_grains_dicts = pickle.load(f)\n",
     "        for grain_index, single_grain_dict in sample_grains_dicts.items():\n",
     "            p_to_nm = single_grain_dict[\"p_to_nm\"]\n",
+    "            single_grain_dict[\"sample_type\"] = sample_type\n",
+    "            single_grain_dict[\"grain_index\"] = grain_index\n",
     "            if p_to_nm > MAX_PX_TO_NM:\n",
     "                print(\n",
     "                    f\"Skipping grain {grain_index} for sample type [{sample_type}] due to p_to_nm too large: {p_to_nm} > {MAX_PX_TO_NM}\"\n",
@@ -321,7 +326,7 @@
    "outputs": [],
    "source": [
     "# plot all grains\n",
-    "if True:\n",
+    "if False:\n",
     "    for sample_type, grain_dict in grains_dicts.items():\n",
     "        print(f\"Plotting grains for sample type [{sample_type}]\")\n",
     "        plot_all_grains_dictionary(\n",
@@ -437,7 +442,7 @@
     "print(f\"Bad grains: {bad_grains}\")\n",
     "\n",
     "# plot all grains with paths\n",
-    "if True:\n",
+    "if False:\n",
     "    for sample_type, grain_dict in grains_dicts_paths.items():\n",
     "        print(f\"Plotting grains with paths for sample type [{sample_type}]\")\n",
     "        plot_all_grains_dictionary(\n",
@@ -683,36 +688,37 @@
    "outputs": [],
    "source": [
     "# plot all grains with defects\n",
-    "for sample_type, grain_dict in grains_dicts_curvature_defects.items():\n",
-    "    print(f\"Plotting grains with defects for sample type [{sample_type}]\")\n",
-    "    plot_all_grains_dictionary(\n",
-    "        grain_dict=grain_dict,\n",
-    "        vmin=VMIN,\n",
-    "        vmax=VMAX,\n",
-    "        cmap=CMAP,\n",
-    "        plot_paths=[\"resampled_path_px\"],\n",
-    "        plot_defects=True,\n",
-    "        plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
-    "        plot_lineplots=[\n",
-    "            [\n",
-    "                \"cumulative_resampled_distances_nm\",\n",
-    "                \"abs_curvature\",\n",
-    "                \"distance (nm)\",\n",
-    "                \"curvature (rad/nm)\",\n",
-    "                \"Curvature\",\n",
-    "                (0.0, 0.5),\n",
-    "            ]\n",
-    "        ],\n",
-    "        plot_lineplot_hlines=[\n",
-    "            (defect_curvature_threshold_radpernm, \"upper curvature threshold\"),\n",
-    "            (-defect_curvature_threshold_radpernm, \"lower curvature threshold\"),\n",
-    "        ],\n",
-    "        save_path=save_dirs[sample_type] / f\"grains_with_defects_{sample_type}.png\",\n",
-    "        show_plot=True,\n",
-    "        figsize_multiplier=5,\n",
-    "        num_grains_to_limit_to=30,\n",
-    "        num_cols=5,\n",
-    "    )"
+    "if False:\n",
+    "    for sample_type, grain_dict in grains_dicts_curvature_defects.items():\n",
+    "        print(f\"Plotting grains with defects for sample type [{sample_type}]\")\n",
+    "        plot_all_grains_dictionary(\n",
+    "            grain_dict=grain_dict,\n",
+    "            vmin=VMIN,\n",
+    "            vmax=VMAX,\n",
+    "            cmap=CMAP,\n",
+    "            plot_paths=[\"resampled_path_px\"],\n",
+    "            plot_defects=True,\n",
+    "            plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
+    "            plot_lineplots=[\n",
+    "                [\n",
+    "                    \"cumulative_resampled_distances_nm\",\n",
+    "                    \"abs_curvature\",\n",
+    "                    \"distance (nm)\",\n",
+    "                    \"curvature (rad/nm)\",\n",
+    "                    \"Curvature\",\n",
+    "                    (0.0, 0.5),\n",
+    "                ]\n",
+    "            ],\n",
+    "            plot_lineplot_hlines=[\n",
+    "                (defect_curvature_threshold_radpernm, \"upper curvature threshold\"),\n",
+    "                (-defect_curvature_threshold_radpernm, \"lower curvature threshold\"),\n",
+    "            ],\n",
+    "            save_path=save_dirs[sample_type] / f\"grains_with_defects_{sample_type}.png\",\n",
+    "            show_plot=True,\n",
+    "            figsize_multiplier=5,\n",
+    "            num_grains_to_limit_to=30,\n",
+    "            num_cols=5,\n",
+    "        )"
    ]
   },
   {
@@ -1299,8 +1305,7 @@
     "# just run a t-test between OT1 and OT2\n",
     "t_test_between_two_samples(\n",
     "    data_df=df_all_outer_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
@@ -1472,13 +1477,15 @@
     "ot2_grain = grains_dicts_middle_curvature_analysis[\"OT2_SC\"][34]\n",
     "ot1_grain = grains_dicts_middle_curvature_analysis[\"OT1_SC\"][32]\n",
     "\n",
+    "print(ot2_grain.keys())\n",
+    "\n",
     "\n",
     "def plot_grain_for_ext_fig(\n",
     "    grain_dict: dict,\n",
     "    coloured_lines_norm_bounds: tuple[int, int] = (0.0, 0.3),\n",
     ") -> None:\n",
     "    fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "    \n",
+    "\n",
     "    image = grain_dict[\"image\"]\n",
     "    middle_path_px = grain_dict[\"middle_path_px\"]\n",
     "    middle_path_curvatures = grain_dict[\"middle_path_curvatures\"]\n",
@@ -1522,8 +1529,15 @@
     "\n",
     "    # turn axes off\n",
     "    plt.axis(\"off\")\n",
-    "\n",
+    "    # remove the white background for the image too\n",
+    "    plt.gcf().patch.set_facecolor(\"none\")\n",
+    "    # save the figure\n",
+    "    plt.savefig(\n",
+    "        EXT_FIG_DATA_SAVE_DIR\n",
+    "        / f\"grain_central_curvature_plot_{grain_dict['sample_type']}_{grain_dict['grain_index']}.png\"\n",
+    "    )\n",
     "    plt.show()\n",
+    "\n",
     "\n",
     "plot_grain_for_ext_fig(ot2_grain)\n",
     "plot_grain_for_ext_fig(ot1_grain)\n",
@@ -1554,6 +1568,8 @@
     "plt.yticks(fontsize=14)\n",
     "plt.xlabel(\"\")\n",
     "plt.tight_layout()\n",
+    "# save the figure\n",
+    "plt.savefig(EXT_FIG_DATA_SAVE_DIR / f\"ot1_ot2_central_mean_curvature_violin_plot.png\")\n",
     "plt.show()\n",
     "\n",
     "# print the Ns\n",
