change figure sizes

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1479,12 +1479,17 @@
     "\n",
     "print(ot2_grain.keys())\n",
     "\n",
+    "figsize = (4, 2.5)\n",
+    "axlabel_font_size = 14\n",
+    "dpi = 500\n",
+    "legend_font_size = 8\n",
+    "\n",
     "\n",
     "def plot_grain_for_ext_fig(\n",
     "    grain_dict: dict,\n",
     "    coloured_lines_norm_bounds: tuple[int, int] = (0.0, 0.3),\n",
     ") -> None:\n",
-    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    fig, ax = plt.subplots(figsize=(5, 5))\n",
     "\n",
     "    image = grain_dict[\"image\"]\n",
     "    middle_path_px = grain_dict[\"middle_path_px\"]\n",
@@ -1495,7 +1500,7 @@
     "\n",
     "    plt.imshow(image, cmap=CMAP, vmin=VMIN, vmax=VMAX)\n",
     "\n",
-    "    plt.plot(middle_path_px[:, 1], middle_path_px[:, 0], color=\"lightgrey\", linewidth=25, label=\"Middle Path\")\n",
+    "    plt.plot(middle_path_px[:, 1], middle_path_px[:, 0], color=\"lightgrey\", linewidth=15, label=\"Middle Path\")\n",
     "\n",
     "    normalised_curvature = (middle_path_curvatures - coloured_lines_norm_bounds[0]) / (\n",
     "        coloured_lines_norm_bounds[1] - coloured_lines_norm_bounds[0]\n",
@@ -1508,7 +1513,7 @@
     "                [previous_point[1], point[1]],\n",
     "                [previous_point[0], point[0]],\n",
     "                color=colour,\n",
-    "                linewidth=8,\n",
+    "                linewidth=5,\n",
     "            )\n",
     "\n",
     "    # render a scale bar of 20 nm\n",
@@ -1529,12 +1534,14 @@
     "\n",
     "    # turn axes off\n",
     "    plt.axis(\"off\")\n",
-    "    # remove the white background for the image too\n",
-    "    plt.gcf().patch.set_facecolor(\"none\")\n",
+    "    plt.tight_layout(pad=0)\n",
     "    # save the figure\n",
     "    plt.savefig(\n",
     "        EXT_FIG_DATA_SAVE_DIR\n",
-    "        / f\"grain_central_curvature_plot_{grain_dict['sample_type']}_{grain_dict['grain_index']}.png\"\n",
+    "        / f\"grain_central_curvature_plot_{grain_dict['sample_type']}_{grain_dict['grain_index']}.png\",\n",
+    "        dpi=dpi,\n",
+    "        bbox_inches=\"tight\",\n",
+    "        pad_inches=0\n",
     "    )\n",
     "    plt.show()\n",
     "\n",
@@ -1546,7 +1553,8 @@
     "df_middle_curvature_stats_ot1_ot2 = df_all_middle_curvature_stats[\n",
     "    df_all_middle_curvature_stats[\"sample_type\"].isin([\"OT1_SC\", \"OT2_SC\"])\n",
     "]\n",
-    "sns.stripplot(x=\"sample_type\", y=\"mean_curvature\", data=df_middle_curvature_stats_ot1_ot2, color=\"grey\")\n",
+    "fig, ax = plt.subplots(figsize=figsize)\n",
+    "sns.stripplot(ax=ax, x=\"sample_type\", y=\"mean_curvature\", data=df_middle_curvature_stats_ot1_ot2, color=\"grey\", s=4)\n",
     "sns.violinplot(\n",
     "    x=\"sample_type\",\n",
     "    y=\"mean_curvature\",\n",
@@ -1556,20 +1564,19 @@
     "    # set palette with hex\n",
     "    palette={\"OT1_SC\": \"#3C7FE6\", \"OT2_SC\": \"#0C5ACE\"},\n",
     "    inner=None,\n",
-    "    linewidth=2,\n",
     "    alpha=0.5,\n",
     ")\n",
-    "plt.ylabel(\"Central mean curvature (rad/nm)\", fontsize=16)\n",
+    "plt.ylabel(\"Central mean\\ncurvature (rad/nm)\", fontsize=axlabel_font_size)\n",
     "# set font size of x ticks\n",
-    "plt.xticks(fontsize=16)\n",
+    "plt.xticks(fontsize=axlabel_font_size)\n",
     "# rename the xticks\n",
     "plt.xticks(ticks=[0, 1], labels=[\"ot1 sc\", \"ot2 sc\"])\n",
     "# set font size of y ticks\n",
-    "plt.yticks(fontsize=14)\n",
+    "plt.yticks(fontsize=axlabel_font_size)\n",
     "plt.xlabel(\"\")\n",
     "plt.tight_layout()\n",
     "# save the figure\n",
-    "plt.savefig(EXT_FIG_DATA_SAVE_DIR / f\"ot1_ot2_central_mean_curvature_violin_plot.png\")\n",
+    "plt.savefig(EXT_FIG_DATA_SAVE_DIR / f\"ot1_ot2_central_mean_curvature_violin_plot.png\", dpi=dpi)\n",
     "plt.show()\n",
     "\n",
     "# print the Ns\n",
